# quizmixer

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  cli.cpp  cli.h  main.cpp
logic/: docwriter.cpp  docwriter.h  quiz.cpp  quiz.h
